[FIX] Markets widget: Align dropdowns with y-axis

--- a/src/less/ripple/widgets.less
+++ b/src/less/ripple/widgets.less
@@ -163,6 +163,10 @@
     }
 
     &.widget-markets {
+      .row.align-with-chart-y-axis {
+        margin-left: 35px;
+      }
+
       button.flip {
         padding-top: 3px;
         padding-bottom: 3px;
